docs: swagger; feat:docker
