# app/docs/swagger.json
@@ -12,10 +12,24 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:10003",
     "basePath": "/api",
     "paths": {
-        "/api/operations": {
+        "/metric": {
+            "get": {
+                "description": "Checks that the server is up and running",
+                "tags": [
+                    "Heartbeat"
+                ],
+                "summary": "Heartbeat",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/operations": {
             "get": {
                 "description": "Retrieves a list of operations with support for filtering and sorting.",
                 "produces": [
@@ -25,7 +39,6 @@
                     "Operations"
                 ],
                 "summary": "Get operations",
-                "operationId": "get-operations",
                 "parameters": [
                     {
                         "type": "string",
@@ -35,14 +48,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Category name",
+                        "description": "Category name (supports operators: substr)",
                         "name": "category_name",
                         "in": "path"
                     },
                     {
                         "type": "string",
                         "description": "Category type",
-                        "name": "query",
+                        "name": "type",
                         "in": "path"
                     },
                     {
@@ -53,19 +66,19 @@
                     },
                     {
                         "type": "string",
-                        "description": "Description",
+                        "description": "Description (supports operators: substr)",
                         "name": "description",
                         "in": "path"
                     },
                     {
                         "type": "string",
-                        "description": "Money sum (supports operators for numbers: eq, neq, lt, lte, gt, gte)",
+                        "description": "Money sum (supports operators: eq, neq, lt, lte, gt, gte, between)",
                         "name": "money_sum",
                         "in": "path"
                     },
                     {
                         "type": "string",
-                        "description": "Date and time of operation (supports formats: yyyy-mm-dd, yyyy-mm-dd:yyyy-mm-dd)",
+                        "description": "Date and time of operation (supports operators: eq, between; format: yyyy-mm-dd)",
                         "name": "date_time",
                         "in": "path"
                     },
@@ -86,9 +99,95 @@
                     "200": {
                         "description": "List of operations",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/entity.Report"
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error in filter or sort parameters",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    },
+                    "418": {
+                        "description": "Something wrong with application logic",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/apperror.AppError"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "apperror.AppError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "developer_message": {
+                    "type": "string"
+                },
+                "fields": {
+                    "$ref": "#/definitions/apperror.ErrorFields"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "params": {
+                    "$ref": "#/definitions/apperror.ErrorParams"
+                }
+            }
+        },
+        "apperror.ErrorFields": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "string"
+            }
+        },
+        "apperror.ErrorParams": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "string"
+            }
+        },
+        "entity.Operation": {
+            "type": "object",
+            "properties": {
+                "category_uuid": {
+                    "type": "string"
+                },
+                "date_time": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "money_sum": {
+                    "type": "number"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Report": {
+            "type": "object",
+            "properties": {
+                "operations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Operation"
+                    }
+                },
+                "total_money_sum": {
+                    "type": "number"
                 }
             }
         }
